# NetlinkHandler

./: .gitignore  CMakeLists.txt  NLGetFamilyId.class.hpp  NetlinkHandler.class.cpp  NetlinkHandler.class.hpp  README.md  doxy.sh  main.cpp  utils.hpp
doxygen/: Dockerfile
strategies/: NFStrategy.class.hpp  NLStrategy.class.hpp  NetlinkStrategy.class.hpp  RTStrategy.class.hpp
strategies/get/: NFGetTable.class.hpp  NLGetP2PDeviceInterfaces.class.hpp  NLGetP2PDevicePhy.class.hpp  NLGetP2PWithoutDeviceInterfaces.class.hpp  NLGetP2PWithoutDevicePhy.class.hpp  NLGetStrategy.class.hpp  NLGetWirelessInterfaces.class.hpp  NLGetWirelessPhy.class.hpp  RTGetAddressFromInterface.class.hpp  RTGetGWFromInterface.class.hpp  RTGetInterfaces.class.hpp  RTGetInterfacesWithGW.class.hpp  RTGetSubnetFromInterface.class.hpp
strategies/mgmt/: NFCreateNATChain.class.hpp  NFCreateTable.class.hpp  NFDeleteNATChain.class.hpp  NFDeleteTable.class.hpp  RTDelAddress.class.hpp  RTDelGateway.class.hpp  RTMgmtStrategy.class.hpp  RTSetAddressAndSubnet.class.hpp  RTSetGateway.class.hpp
